more debugging helpers
* provide java version and system properties to the javascript side
* javascript can toggle the applets file name resolution behaviour

--- a/java/build.xml
+++ b/java/build.xml
@@ -1,5 +1,6 @@
 <project name="TiddlySaver" default="sign">
 
+    <property file="build.properties.OVERRIDE" />
     <property file="build.properties" />
     <property file="build.properties.default" />
 
