force sign the jar
sometimes the old official signed one would not get overwritten because
git sets the modification to the checkout time.  confusion ensues.

debugging code removed

--- a/java/build.xml
+++ b/java/build.xml
@@ -95,7 +95,8 @@ keytool -import -alias NameOfSigningKey -file YourCertFIle.cert
             storetype="${sign.keystore.type}"
             storepass="${sign.keystore.pass}"
             alias="${sign.key.alias}"
-            keypass="${sign.key.pass}" />
+            keypass="${sign.key.pass}" 
+            force="true" />
     </target>
 
 
